# modern_cpp_challenge

./: .gitignore  CMakeLists.txt  README.md
1/: CMakeLists.txt  condition.txt  main.cpp
10/: condition.txt  main.cpp
11/: condition.txt  main.cpp
12/: condition.txt  main.cpp
13/: condition.txt  main.cpp
14/: condition.txt  main.cpp
2/: condition.txt  main.cpp
3/: condition.txt  main.cpp
4/: condition.txt  main.cpp
5/: condition.txt  main.cpp
6/: condition.txt  main.cpp
7/: condition.txt  main.cpp
8/: condition.txt  main.cpp
9/: condition.txt  main.cpp
